Fix height overlap on iframe

--- a/ubgc/static-dev/css/main.css
+++ b/ubgc/static-dev/css/main.css
@@ -58,8 +58,6 @@ td, th{
 #entry_playbox{
     border:none;
     width:100%;
-    height:500px;
-    overflow:hidden;
 }
 
 #entry_playbox iframe{
